tests/ui/invalid_base_class.stderr
error[E0277]: pyclass `PyBool` cannot be subclassed
  --> tests/ui/invalid_base_class.rs:4:1
   |
 4 | #[pyclass(extends=PyBool)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^ required for `#[pyclass(extends=PyBool)]`
   |
   = help: the trait `PyClassBaseType` is not implemented for `PyBool`
   = note: `PyBool` must have `#[pyclass(subclass)]` to be eligible for subclassing
   = note: with the `abi3` feature enabled, PyO3 does not support subclassing native types
help: the trait `PyClassBaseType` is implemented for `PyAny`
  --> src/types/any.rs:55:1
   |
55 | impl crate::impl_::pyclass::PyClassBaseType for PyAny {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in the attribute macro `pyclass` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: pyclass `PyBool` cannot be subclassed
   --> tests/ui/invalid_base_class.rs:4:19
    |
  4 | #[pyclass(extends=PyBool)]
    |                   ^^^^^^ required for `#[pyclass(extends=PyBool)]`
    |
    = help: the trait `PyClassBaseType` is not implemented for `PyBool`
    = note: `PyBool` must have `#[pyclass(subclass)]` to be eligible for subclassing
    = note: with the `abi3` feature enabled, PyO3 does not support subclassing native types
help: the trait `PyClassBaseType` is implemented for `PyAny`
   --> src/types/any.rs:55:1
    |
 55 | impl crate::impl_::pyclass::PyClassBaseType for PyAny {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `PyClassImpl::BaseType`
   --> src/impl_/pyclass.rs:184:33
    |
184 |     type BaseType: PyTypeInfo + PyClassBaseType;
    |                                 ^^^^^^^^^^^^^^^ required by this bound in `PyClassImpl::BaseType`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
